--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-    <title>Resource Calculator</title>
+    <title>Build-A-Crab Price Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header class="header">
-            <h1>Resource Calculator</h1>
+            <h1>Build-A-Crab Price Calculator</h1>
             <div class="description">
-                <p>Enter values between 0-158 in the fields below. Total must not exceed 158.</p>
+                <p>Total mutations must not exceed 158 to stay under level cap.</p>
             </div>
         </header>
 
@@ -36,21 +36,21 @@
                     <img src="images/Berrybush_Seeds.png" alt="BBs" class="currency-icon">
                     BBs
                 </h3>
-                <p id="price1">0 BBs</p>
+                <p id="price1">5,000</p>
             </div>
             <div class="price-card">
                 <h3 class="currency-header">
                     <img src="images/Polymer.png" alt="Hard Poly" class="currency-icon">
                     Hard Poly
                 </h3>
-                <p id="price2">0 Hard Poly</p>
+                <p id="price2">2,500</p>
             </div>
             <div class="price-card">
                 <h3 class="currency-header">
                     <img src="images/Black_Pearl.png" alt="Black Pearls" class="currency-icon">
                     Black Pearls
                 </h3>
-                <p id="price3">0 Black Pearls</p>
+                <p id="price3">625</p>
             </div>
         </div>
     </div>
