--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1>Build-A-Crab Price Calculator</h1>
+            <h1>Build-A-Crab\nPrice Calculator</h1>
             <div class="description">
                 <p>Total mutations must not exceed 158 to stay under level cap.</p>
             </div>
